--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <a>first git project</a>
+    <a>second git project</a>
 
     <script>
         console.log("first git project");
