修改文件内容

--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
     <a>second git project</a>
 
     <script>
-        console.log("first git project");
+        console.log("second git project");
     </script>
 </body>
 </html>
