--- a/test.html
+++ b/test.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-    <a>second git project</a>
-
+    <a>first git project</a>
+    <a>third git project</a>
     <script>
-        console.log("second git project");
+        console.log("first git project");
     </script>
 </body>
 </html>
