--- a/test.html
+++ b/test.html
@@ -12,6 +12,7 @@
     <a>third git project</a>
     <script>
         console.log("first git project");
+        console.log("first third project");
     </script>
 </body>
 </html>
