--- a/test.html
+++ b/test.html
@@ -7,12 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-
-    <a>first git project</a>
-    <a>third git project</a>
+    <a>second git project</a>
     <script>
-        console.log("first git project");
-        console.log("first third project");
+        console.log("second git project");
     </script>
 </body>
 </html>
