--- a/test.html
+++ b/test.html
@@ -11,8 +11,9 @@
     <a>first git project</a>
     <a>third git project</a>
     <script>
-        console.log("first git project");
-        console.log("third third project");
+        console.log("one git project");
+        console.log("two third project");
+         console.log("three third project");
     </script>
 </body>
 </html>
