--- a/test.html
+++ b/test.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <a>first git project</a>
-
+    <a>third git project</a>
     <script>
-        console.log("one git project");
-        console.log("two third project");
-         console.log("three third project");
+
+        console.log("first git project");
+        console.log("second third project");
+        console.log("third third project");
     </script>
 </body>
 </html>
